# luzIA-web

./: pyproject.toml  requirements.txt
luzia_web/: app.py
