[tool.poetry]
name = "luzia-web"
version = "0.1.0"
description = ""
authors = ["Gabriel Aranha <talk@gabrielaranha.com>"]
readme = "README.md"
packages = [{include = "luzia_web"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
streamlit = "^1.21.0"
pillow = "^9.5.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
